@@ -1026,6 +1026,7 @@ update_dynamic_varobj_children (struct varobj *var,
   for (; to < 0 || i < to + 1; ++i)
     {
       PyObject *item;
+      int force_done = 0;
 
       /* See if there was a leftover from last time.  */
       if (var->saved_item)
@@ -1037,7 +1038,48 @@ update_dynamic_varobj_children (struct varobj *var,
 	item = PyIter_Next (var->child_iter);
 
       if (!item)
-	break;
+	{
+	  /* Normal end of iteration.  */
+	  if (!PyErr_Occurred ())
+	    break;
+
+	  /* If we got a memory error, just use the text as the
+	     item.  */
+	  if (PyErr_ExceptionMatches (gdbpy_gdb_memory_error))
+	    {
+	      PyObject *type, *value, *trace;
+	      char *name_str, *value_str;
+
+	      PyErr_Fetch (&type, &value, &trace);
+	      value_str = gdbpy_exception_to_string (type, value);
+	      Py_XDECREF (type);
+	      Py_XDECREF (value);
+	      Py_XDECREF (trace);
+	      if (!value_str)
+		{
+		  gdbpy_print_stack ();
+		  break;
+		}
+
+	      name_str = xstrprintf ("<error at %d>", i);
+	      item = Py_BuildValue ("(ss)", name_str, value_str);
+	      xfree (name_str);
+	      xfree (value_str);
+	      if (!item)
+		{
+		  gdbpy_print_stack ();
+		  break;
+		}
+
+	      force_done = 1;
+	    }
+	  else
+	    {
+	      /* Any other kind of error.  */
+	      gdbpy_print_stack ();
+	      break;
+	    }
+	}
 
       /* We don't want to push the extra child on any report list.  */
       if (to < 0 || i < to)
@@ -1051,7 +1093,10 @@ update_dynamic_varobj_children (struct varobj *var,
 	  inner = make_cleanup_py_decref (item);
 
 	  if (!PyArg_ParseTuple (item, "sO", &name, &py_v))
-	    error (_("Invalid item from the child list"));
+	    {
+	      gdbpy_print_stack ();
+	      error (_("Invalid item from the child list"));
+	    }
 
 	  v = convert_value_from_python (py_v);
 	  if (v == NULL)
@@ -1071,6 +1116,9 @@ update_dynamic_varobj_children (struct varobj *var,
 	     element.  */
 	  break;
 	}
+
+      if (force_done)
+	break;
     }
 
   if (i < VEC_length (varobj_p, var->children))
