@@ -1,3 +1,10 @@
+2011-03-31  Tom Tromey  <tromey@redhat.com>
+
+	* gdb.python/py-prettyprint.py (exception_flag): New global.
+	(NoStringContainerPrinter._iterator.next): Check it.
+	* gdb.python/py-prettyprint.c (main): New variable nstype2.
+	* gdb.python/py-mi.exp: Set exception_flag and do more tests.
+
 2011-03-29  Tom Tromey  <tromey@redhat.com>
 
 	* gdb.cp/anon-struct.cc: New file.
