@@ -1,3 +1,8 @@
+2011-03-31  Tom Tromey  <tromey@redhat.com>
+
+	* varobj.c (update_dynamic_varobj_children): Properly handle
+	errors from iterator.
+
 2011-03-31  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
 	* dwarf2read.c (dwarf2_name): Initialize DEMANGLED.  Avoid demangling
